// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseTrade 1`] = `
Object {
  "amount": 0.1198,
  "id": "32872596",
  "price": 630.17,
  "source": "GDAX",
  "timestamp": 1524739231228,
}
`;

exports[`parseTrade 2`] = `
Object {
  "amount": 0.983,
  "id": "32872595",
  "price": 630.11,
  "source": "GDAX",
  "timestamp": 1524739231228,
}
`;

exports[`parseTrade 3`] = `
Object {
  "amount": 0.2,
  "id": "32872594",
  "price": 630.11,
  "source": "GDAX",
  "timestamp": 1524739231228,
}
`;
